--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>About</h2>
               <br/>
-                <p>Please visit our GitHub page at <a href="http://www.github.com/CANSOFCOM-Innovation"http://www.github.com/CANSOFCOM-Innovation</a></p>
+                <p>Please visit our GitHub page at <a href="http://www.github.com/CANSOFCOM-Innovation">http://www.github.com/CANSOFCOM-Innovation</a></p>
 				<br />
 				<p>More info about CANSOFCOM <a href="http://www.forces.gc.ca/en/operations-special-forces/about.page">http://www.forces.gc.ca/en/operations-special-forces/about.page</a></p>
                 <br/>
