--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -38,8 +38,8 @@ h6 {
 
 .intro-message {
     position: relative;
-    /*padding-top: 20%;
-    padding-bottom: 20%;*/
+    padding-top: 20%;
+    /*padding-bottom: 20%;*/
 }
 
 .intro-message > h1 {
