--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-              <br/><br/>
+				<br />
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/SAuLJ8btatc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+				<br />
+              <!-- <br/><br/>
               <h2>About Landing-Page</h2>
               <br/>
                 <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
@@ -10,6 +13,6 @@
                 <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
                 <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
                 <br/>
-              </div>
+              </div> -->
         </div>
     </section>
