--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8">
 				<br />
 				<iframe width="1120" height="630" src="https://www.youtube.com/embed/SAuLJ8btatc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 				<br />
