--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8">
 				<br />
-				<iframe width="1120" height="630" src="https://www.youtube.com/embed/SAuLJ8btatc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1120" height="630" src="https://www.youtube.com/embed/SAuLJ8btatc?rel=0&amp;showinfo=0&amp;start=4" frameborder="0" allowfullscreen></iframe>
 				<br />
               <!-- <br/><br/>
               <h2>About Landing-Page</h2>
