--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,10 @@
                     <li>
                         <a href="#about">About</a>
                     </li>
+					<li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#hackthenorth">Hack The North 2017</a>
+                    </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
             </div>
