--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,10 @@
             <ul class="nav navbar-nav navbar-right">  
             	<li>
                     <a class="page-scroll" href="#about">About</a>
-                </li>            
+                </li>
+				<li>
+                    <a class="page-scroll" href="#hackthenorth">Hack The North 2017</a>
+                </li> 
             </ul>
         </div>
         <!-- /.navbar-collapse -->
