--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,13 @@
             </button>
             <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
         </div>
+		
+		<div class="avatar-container">
+			<div class="avatar-img-border">
+				<a href=""><img class="avatar-img" src=avatar-icon2.png"></a>
+			</div>
+		</div>
+		
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
