--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -26,6 +26,21 @@ h6 {
     font-weight: 400;
 }
 
+.avatar-container {
+	left: 50%;
+	position: absolute;
+}
+
+.avatar-img-border {
+	width: 100%;
+}
+
+.avatar-img {
+	width: 100%;
+	display: block;
+}
+
+
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
