--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 		
 		<div class="avatar-container">
 			<div class="avatar-img-border">
-				<a href=""><img class="avatar-img" src=avatar-icon2.png"></a>
+				<a href=""><img class="avatar-img" src=img/avatar-icon2.png"></a>
 			</div>
 		</div>
 		
