--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,6 +21,8 @@ h6 {
     font-weight: 700;
 }
 
+body { background: black;}
+
 .lead {
     font-size: 18px;
     font-weight: 400;
@@ -46,9 +48,9 @@ h6 {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
-    color: #f8f8f8;
+    color: #000000;
     /*background: url(../img/intro-bg.jpg) no-repeat center center;*/
-	background: black;
+	background: #F5F5F5;
     background-size: cover;
 }
 
