--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,11 +12,31 @@
             <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
         </div>
 		
+		
+		
+		{% if page.image and (layout.show-avatar or page.show-avatar) %}
 		<div class="avatar-container">
+		  <div class="avatar-img-border">
+			<a href="{{ site.url }} ">
+			  <img class="avatar-img" src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" />
+			</a>
+		  </div>
+		</div>
+		{% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
+		<div class="avatar-container">
+		  <div class="avatar-img-border">
+			<a href="{{ site.url }} ">
+			  <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
+			</a>
+		  </div>
+		</div>
+		{% endif %}
+		
+		<!--<div class="avatar-container">
 			<div class="avatar-img-border">
 				<a href=""><img class="avatar-img" src="img/avatar-icon2.png"></a>
 			</div>
-		</div>
+		</div> -->
 		
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
