--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -176,8 +176,9 @@ body { background: black;}
 }
 
 footer {
-    padding: 50px 0;
-    background-color: #f8f8f8;
+    padding: 30px 0;
+    background-color: #000000;
+	border: 1px solid rgba(0,0,0,0.2) !important
 }
 
 p.copyright {
