--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -131,7 +131,7 @@ body { background: black;}
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/banner-bg.png) no-repeat center center;
     background-size: cover;
 }
 
