--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -49,7 +49,7 @@ body { background: black;}
     padding-bottom: 50px;
     text-align: center;
     color: #000000;
-    /*background: url(../img/intro-bg.jpg) no-repeat center center;*/
+    background: url(../img/intro-bg.png) no-repeat center center;
 	background: #F5F5F5;
     background-size: cover;
 }
@@ -131,7 +131,7 @@ body { background: black;}
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.png) no-repeat center center;
+    /*background: url(../img/banner-bg.png) no-repeat center center;*/
     background-size: cover;
 }
 
