--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -43,14 +43,13 @@ body { background: black;}
 	display: block;
 }
 
-
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #000000;
     background: url(../img/intro-bg.png) no-repeat center center;
-	background: #F5F5F5;
+	/*background: #F5F5F5;*/
     background-size: cover;
 }
 
