--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,8 +21,6 @@ h6 {
     font-weight: 700;
 }
 
-body { background: black;}
-
 .lead {
     font-size: 18px;
     font-weight: 400;
@@ -48,7 +46,7 @@ body { background: black;}
     padding-bottom: 50px;
     text-align: center;
     color: #000000;
-    background: url(../img/intro-bg.png) no-repeat center center;
+    background: url(../img/intro-bg.jpg) no-repeat center center;
 	/*background: #F5F5F5;*/
     background-size: cover;
 }
