--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,8 +51,9 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="intro-message">
-						<h1>{{ page.title }}</h1>
-						<h3>{{ page.subTitle }}</h3>
+						<!-- <h1>{{ page.title }}</h1>
+						<h3>{{ page.subTitle }}</h3> -->
+						<center><img src="../img/title-logo.png"></center>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
