--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -47,17 +47,17 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #000000;
-    background: url(../img/title-logo.png) no-repeat center center; /*COVER*/
-	/*background: #F5F5F5;*/
+   /* background: url(../img/title-logo.png) no-repeat center center; /*COVER*/
+	background: #F5F5F5;
     background-size: cover;
 }
 
 .intro-message {
     position: relative;
 	padding-top: 5%;
-	/*padding-bottom: 0;*/
-    padding-top: 20%;
-    padding-bottom: 20% /*COVER*/
+	padding-bottom: 0;
+    /*padding-top: 20%;
+    padding-bottom: 20% COVER*/
 }
 
 .intro-message > h1 {
