--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
 					<div class="intro-message">
 						<!-- <h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3> -->
-						<center><img src="../img/title-logo.png"></center>
+						<center><img src="../img/title-logo.png" width="100%"></center>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
