--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -48,7 +48,7 @@ body { background: black; }
 	display: block;
 }
 
-@media only screen and (min-width: 767px){}
+@media only screen and (min-width: 767px){
 	.avatar-container{
 		width:50px;
 	}
