--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -41,6 +41,7 @@ body { background: black; }
 .avatar-img-border {
 	width: 100%;
 	margin-left:-50%;
+	margin-top:-50%;
 }
 
 .avatar-img {
@@ -178,6 +179,10 @@ body { background: black; }
 	
 	.avatar-container{
 		width:100px;
+	}
+	
+	.avatar-img-border {
+		margin-top: 0;
 	}
 	.video {
 		width:560px;
